--- a/multimap/index.html
+++ b/multimap/index.html
@@ -43,8 +43,10 @@
 
 	<!-- other plugins -->
 	<script src="lib/leaflet-google.js"></script>
+	<script src="http://maps.google.com/maps/api/js?key=AIzaSyB-pSBQY6cvQIGWVnGXIvliFLCR0Sik-m8"></script>
+	<!--
 	<script src="lib/google-api-2.js"></script>
-	<!--<script src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyB-pSBQY6cvQIGWVnGXIvliFLCR0Sik-m8"></script>-->
+	-->
 
 	<script src="lib/layer/tile/Bing.js"></script>
 </head>
