anpassungen für https support

--- a/multimap/index.html
+++ b/multimap/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-	<title>Multimap (20170118-1351)</title>
+	<title>Multimap (20170809-1501)</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />	
 	<!-- favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
@@ -43,7 +43,7 @@
 
 	<!-- other plugins -->
 	<script src="lib/leaflet-google.js"></script>
-	<script src="http://maps.google.com/maps/api/js?key=AIzaSyB-pSBQY6cvQIGWVnGXIvliFLCR0Sik-m8"></script>
+	<script src="https://maps.google.com/maps/api/js?key=AIzaSyB-pSBQY6cvQIGWVnGXIvliFLCR0Sik-m8"></script>
 	<!--
 	<script src="lib/google-api-2.js"></script>
 	-->
