add forecast.io / darsky vorhersage to multiwetter

--- a/multiweather/index.html
+++ b/multiweather/index.html
@@ -42,9 +42,12 @@
 					<div class="col-sm-5 col-md-3">
 						<iframe src="https://www.meteoblue.com/de/wetter/widget/daily/wien_%c3%96sterreich_2761369?geoloc=fixed&days=7&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&coloured=coloured&pictoicon=1&maxtemperature=1&mintemperature=1&windspeed=1&precipitation=1&precipitationprobability=1&spot=1&layout=light"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 378px;height: 350px"></iframe>
 					</div>
-					<div class="col-sm-7 col-md-5">
-						<iframe src="https://www.wunderground.com/at/vienna#forecast"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 600px;height: 615px;top: -300px"></iframe>
+					<div class="col-sm-5 col-md-3">
+						<iframe id="forecast_embed" frameborder="0" height="245" width="100%" src="https://forecast.io/embed/#lat=48.2&lon=16.3667&name=Wien"></iframe> 
 					</div>
+					<!--<div class="col-sm-7 col-md-5">
+						<iframe src="https://www.wunderground.com/at/vienna#forecast"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 600px;height: 615px;top: -300px"></iframe>
+					</div>-->
 					<div class="col-sm-6 col-md-4">
 						<iframe src="http://www.bergfex.at/sommer/wien-stadt/wetter/#detail"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 500px;height: 700px;"></iframe>
 					</div>
