--- a/multiweather/index.html
+++ b/multiweather/index.html
@@ -11,7 +11,7 @@
 			.primeNumCell {background-color: lightskyblue;text-align: center}
 			.nonPrimeNumCell {text-align: center}*/
         </style>
-		<script src="./primenumber.js" type="text/javascript">
+		<!-- <script src="./primenumber.js" type="text/javascript"> -->
 		
 		</script>
     </head>
@@ -39,11 +39,12 @@
 			<div class="" style="width: 100%">
 				<div class="row">
 					<!--<div class="col-sm-1"></div>-->
-					<div class="col-sm-5 col-md-3">
+					<div class="col-sm-4 col-md-2">
 						<iframe src="https://www.meteoblue.com/de/wetter/widget/daily/wien_%c3%96sterreich_2761369?geoloc=fixed&days=7&tempunit=CELSIUS&windunit=KILOMETER_PER_HOUR&coloured=coloured&pictoicon=1&maxtemperature=1&mintemperature=1&windspeed=1&precipitation=1&precipitationprobability=1&spot=1&layout=light"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 378px;height: 350px"></iframe>
 					</div>
-					<div class="col-sm-5 col-md-3">
-						<iframe id="forecast_embed" frameborder="0" height="245" width="100%" src="https://forecast.io/embed/#lat=48.2&lon=16.3667&name=Wien"></iframe> 
+					<div class="col-sm-7 col-md-5">
+						<!-- <iframe id="forecast_embed" frameborder="0" height="245" width="100%" src="https://forecast.io/embed/#lat=48.2&lon=16.3667&name=Wien"></iframe>  -->
+						<iframe src="https://darksky.net/forecast/48.2084,16.3725/ca24/de"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 840px;height: 450px;top: -300px"></iframe>
 					</div>
 					<!--<div class="col-sm-7 col-md-5">
 						<iframe src="https://www.wunderground.com/at/vienna#forecast"  frameborder="0" scrolling="NO" allowtransparency="true" sandbox="allow-same-origin allow-scripts allow-popups" style="width: 600px;height: 615px;top: -300px"></iframe>
