--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </div>
 
     <div class="container text-left">
+      <iframe src="https://duckduckgo.com/search.html?width=200&prefill=Suche mit DuckDuckGo&focus=yes" style="overflow:hidden;margin:0;padding:0;width:258px;height:40px;" frameborder="0"></iframe>
+      <hr>
       <ul>
         <li><a href="https://www.google.at/">Google</a></li>
         <li><a href="https://www.bing.com/">Bing</a></li>
@@ -50,6 +52,21 @@
       </ul>
       <hr>
       <div class="container text-left">
+        <h3>Webradio</h3>
+          <ul>
+          <li><a href="http://mp3stream7.apasf.apa.at/;?type=http&nocache=18478"	                                                   >Ö3	                    </a></li>
+          <li><a href="http://mp3wien2.apasf.sf.apa.at/;?type=http&nocache=70"	                                                     >Radio Wien	            </a></li>
+          <li><a href="http://onair.krone.at/kronehit-fresh.mp3"	                                                                   >Kronehit Fresh	        </a></li>
+          <li><a href="http://onair.krone.at/kronehit-hd.mp3"	                                                                       >Kronehit HD	            </a></li>
+          <li><a href="http://onair.krone.at/kronehit-event.mp3"	                                                                   >Kronehit Summer	        </a></li>
+          <li><a href="http://onair.krone.at/kronehit-love.mp3"	                                                                     >Kronehit Lovesongs	    </a></li>
+          <li><a href="http://onair.krone.at/kronehit-greatesthits.mp3"	                                                             >Kronehit Greatest Hits	</a></li>
+          <li><a href="http://raj.krone.at/kronehit-charts.mp3"	                                                                     >Kronehit Charts	        </a></li>
+          <li><a href="http://cdn.nrjaudio.fm/adwz1/at/55212/mp3_128.mp3"	                                                           >Radio Energy	          </a></li>
+          <li><a href="http://streamplus14.leonex.de:24954/;584871725547991stream.nsv"	                                             >Radio Ö24	              </a></li>
+          <li><a href="http://xapp2450489345c1000321.f.l.i.lb.core-cdn.net/1000321copo/live/app2450489345/w2445344770/live_de_96.mp3">88.6 der Musiksender	  </a></li>
+          <li><a href="http://online-radiorelax.tavrmedia.ua/RadioRelax"                                                             >Radio Relac             </a></li>
+          </ul>
         <h3><a href="http://www.radio.at/">Radio.at</a><h3>
           <div class="container">
             <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="oe3" data-autoplay="false" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//oe3.radio.at" target="_blank">Hitradio Ö3 auf radio.at</a></noscript>
@@ -57,7 +74,13 @@
           </div>
           <div class="container">
             <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="kronehitfresh" data-autoplay="false" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//kronehitfresh.radio.at" target="_blank">KRONEHIT Fresh auf radio.at</a></noscript>
+            <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="kronehitchristmas" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//kronehitchristmas.radio.at" target="_blank">KRONEHIT Spring Break auf radio.at</a></noscript>
+            <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="kronehit" data-autoplay="false" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//kronehit.radio.at" target="_blank">KRONEHIT auf radio.at</a></noscript>
+          </div>
+          <div class="container">
             <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="energyaustria" data-autoplay="false" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//energyaustria.radio.at" target="_blank">Energy Österreich auf radio.at</a></noscript>
+            <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="radio886" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//radio886.radio.at" target="_blank">radio 88.6 auf radio.at</a></noscript>
+            <script>(function(d, s){if(!window.rel){s = d.createElement("script");s.type = "text/javascript";s.async = true;s.id = "radio-de-embedded";s.src = "//www.radio.at/inc/microsite/js/full.js";d.getElementsByTagName("head")[0].appendChild(s);window.rel = true;}}(document));</script><div class="ng-app-embedded"><div ui-view class="microsite embedded-radio-player" data-playerwidth="340px" data-playertype="web_embedded" data-playstation="oe24" data-apikey="df04ff67dd3339a6fc19c9b8be164d5b5245ae93"></div></div><noscript><a href="//oe24.radio.at" target="_blank">Radio Ö24 Wien auf radio.at</a></noscript>
           </div>
         </div>
     </div>
