--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       window.open(searchUrl+searchStringVal);
     }
   </script>
+  <style>
+    .margin-top-xs {margin-top: 5px;}  
+    .margin-bottom-xs {margin-bottom: 5px;}  
+    .margin-bottom-sm {margin-bottom: 10px;} 
+    .margin-bottom-md {margin-bottom: 15px;}
+    .margin-bottom-lg {margin-bottom: 20px;}  
+  </style>
 </head>
 
 <body>
@@ -36,32 +43,32 @@
     <!-- <iframe src="https://duckduckgo.com/search.html?width=200&prefill=Suche mit DuckDuckGo&focus=yes" style="overflow:hidden;margin:0;padding:0;width:258px;height:40px;"
       frameborder="0"></iframe>
     <hr> -->
-    <div class="well">
-      <label>Gehe zu URL:</label>
-      <div class="row">
+    <div class="well well-lg">
+      <div class="row margin-bootom-xs">
+        <label>Gehe zu URL:</label>
+      </div>
+      <div class="row margin-bootom-xs">
         <div class="col-sm-10">
           <input id="urlToOpen" name="urlToOpen" type="url" class="form-control" required>
         </div>
         <div class="col-sm-2">
-          <input class="btn btn-warning" type="button" value="Öffne URL" onclick="openUrl()">
+          <input class="btn btn-success" type="button" value="Öffne URL" onclick="openUrl()">
         </div>
       </div>
-    </div>
-    <!-- <div class="row">
-          <hr>
-        </div> -->
-    <div class="well">
-      <label>Online Suche:</label>
+      <div class="clearfix"></div>
+      <div class="row martin-top-xs">
+          <label>Online Suche:</label>
+      </div>
       <div class="row">
         <div class="col-sm-6">
           <input class="form-control" id="searchString" name="searchString" type="text" class="" size="120" required>
         </div>
         <div class="col-sm-6">
-          <div class="btn-group">
-          <input class="btn btn-warning" type="button" value="QWant" onclick="doSearch('https://www.qwant.com/?t=all&q=')">
-          <input class="btn btn-warning" type="button" value="DuckDuckGo" onclick="doSearch('https://duckduckgo.com/?q=')">
-          <input class="btn btn-warning" type="button" value="Google" onclick="doSearch('https://www.google.at/search?q=')">
-          <input class="btn btn-warning" type="button" value="Bing" onclick="doSearch('https://www.bing.com/search?q=')">
+          <div class="btn-group btn-group-fluid pull-right">
+            <input class="btn btn-success" type="button" value="QWant" onclick="doSearch('https://www.qwant.com/?t=all&q=')">
+            <input class="btn btn-success" type="button" value="DuckDuckGo" onclick="doSearch('https://duckduckgo.com/?q=')">
+            <input class="btn btn-success" type="button" value="Google" onclick="doSearch('https://www.google.at/search?q=')">
+            <input class="btn btn-success" type="button" value="Bing" onclick="doSearch('https://www.bing.com/search?q=')">
           </div>
         </div>
       </div>
@@ -70,68 +77,83 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-sm-12 btn-group ">
-        <a class="btn btn-primary btn-lg" href="https://www.google.at/">Google</a>
-        <a class="btn btn-primary btn-lg" href="https://www.bing.com/">Bing</a>
-        <a class="btn btn-primary btn-lg" href="https://www.qwant.com/?l=de&h=0&hc=1&a=1&s=2&b=1&i=1&r=AT&sr=de">QWant</a>
-        <a class="btn btn-primary btn-lg" href="https://duckduckgo.com/">Duckduckgo</a>
+      <div class="col-sm-12 btn-group btn-group-justified">
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.google.at/">Google</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.bing.com/">Bing</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://www.qwant.com/?l=de&h=0&hc=1&a=1&s=2&b=1&i=1&r=AT&sr=de">QWant</a>
+        <a class="btn btn-primary btn-lg" target="_blank" href="https://duckduckgo.com/">Duckduckgo</a>
       </div>
     </div>
     <hr>
     <div class="row">
-      <div class="col-sm-12 btn-group">
-        <a class="btn btn-primary  btn-lg" href="https://www.google.at/search?safe=active&source=hp&ei=X4ksW43_MofTwAKEuIvYDw&q=wm&oq=wm&gs_l=mobile-gws-wiz-hp.3..46i131j0i131j0l3.2437.2897..3271...0....115.275.2j1......0....1.......0.slm5%2BuREp6Q%3D&dlnr=1&sei=ZIksW9bVMMPPwQLEnpqQCg#dlnr=1&sie=lg;/m/06qjc4;2;/m/030q7;mt;fp;1">WM 2018 - Google</a>
-        <a class="btn btn-primary  btn-lg" href="https://www.qwant.com/?q=wm%202018&t=all">WM 2018 - QWant</a>
-        <a class="btn btn-primary  btn-lg" href="http://sport.orf.at/fussball/today">WM 2018 - ORF</a>
+      <div class="col-sm-12 btn-group btn-group-justified">
+        <a class="btn btn-primary  btn-lg" target="_blank" href="https://www.google.at/search?safe=active&source=hp&ei=X4ksW43_MofTwAKEuIvYDw&q=wm&oq=wm&gs_l=mobile-gws-wiz-hp.3..46i131j0i131j0l3.2437.2897..3271...0....115.275.2j1......0....1.......0.slm5%2BuREp6Q%3D&dlnr=1&sei=ZIksW9bVMMPPwQLEnpqQCg#dlnr=1&sie=lg;/m/06qjc4;2;/m/030q7;mt;fp;1">WM 2018 - Google</a>
+        <a class="btn btn-primary  btn-lg" target="_blank" href="https://www.qwant.com/?q=wm%202018&t=all">WM 2018 - QWant</a>
+        <a class="btn btn-primary  btn-lg" target="_blank" href="http://sport.orf.at/fussball/today">WM 2018 - ORF</a>
       </div>
     </div>
     <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="https://uhr.ptb.de/">Atomuhr online</a>
+    <div class="row margin-bottom-xs">
+        <div class="col-sm-12 btn-group btn-group-justified">
+          <a class="btn btn-info btn-block btn-lg" target="_blank" href="atomuhr/">Atomuhr (Chello)</a>
+          <a class="btn btn-info btn-block btn-lg" target="_blank" href="https://uhr.ptb.de/">Atomuhr PTB</a>
+        </div>
+    </div>
+    <div class="row margin-bottom-xs">
+      <div class="col-sm-12 btn-group btn-group-justified">
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="multimap/">Multimap (Chello)</a>
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="https://sky-flyer.github.io/demomaps/multimap/">Multimap (Github)</a>
+      </div>
+    </div>
+    <div class="row margin-bottom-xs">
+      <div class="col-sm-12 btn-group btn-group-justified">
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="primenumber/">Primzahlen</a>
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="zapfen/">Zapfenrechner</a>
+      </div>
+    </div>
+    <div class="row margin-bottom-xs">
+      <div class="col-sm-12 btn-group btn-group-justified">
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="bahnhofsuhr/">Bahnhofsuhr</a>
+        <a class="btn btn-info btn-block btn-lg" target="_blank" href="digitaluhr/">Digitaluhr</a>
+      </div>
+    </div>
+    <a class="btn btn-info btn-block btn-lg" target="_blank" href="chucknorris/">Chuck Norris Database</a>
     <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="multimap/">Multimap (Chello)</a>
-    <a class="btn btn-primary btn-block btn-lg" href="primenumber/">Primzahlen</a>
-    <a class="btn btn-primary btn-block btn-lg" href="zapfen/">Zapfenrechner</a>
-    <a class="btn btn-primary btn-block btn-lg" href="atomuhr/">Atomuhr (lokal)</a>
-    <a class="btn btn-primary btn-block btn-lg" href="bahnhofsuhr/">Bahnhofsuhr</a>
-    <a class="btn btn-primary btn-block btn-lg" href="digitaluhr/">Digitaluhr</a>
-    <a class="btn btn-primary btn-block btn-lg" href="chucknorris/">Chuck Norris Database</a>
+    <a class="btn btn-info btn-block btn-lg" target="_blank" href="https://sky-flyer.github.io/demomaps/">Sky-Flyer Github Projects</a>
     <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="https://sky-flyer.github.io/demomaps/">Github Projects</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://sky-flyer.github.io/demomaps/multimap/">Multimap (Github)</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.updatemi.com/my">Updatemi</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://feedly.com/i/my">Feedly</a>
+    <!-- <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://www.uncovr.com/News/">Uncovr</a> -->
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://news.google.at">Google News</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.msn.com/de-at/">MSN News</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://de.euronews.com/">Euronews</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://news.orf.at/">ORF News</a>
     <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="https://www.updatemi.com/my">Updatemi</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://feedly.com/i/my">Feedly</a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://www.uncovr.com/News/">Uncovr</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://news.google.at">Google News</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://www.msn.com/de-at/">MSN News</a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://de.euronews.com/">Euronews</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://news.orf.at/">ORF News</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://wetter.orf.at/wien/prognose">ORF Wetter</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.bergfex.at/sommer/wien-stadt/wetter/">Bergfex Wetter</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.meteoblue.com/de/wetter/vorhersage/multimodel/unter-sankt-veit_Österreich_2601119">Meteoblue Multimodel Ober St. Veit</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://www.meteoblue.com/de/wetter/vorhersage/multimodel/biograd-na-moru_kroatien_3204121?fcstlength=168">Meteoblue Multimodel Biograd</a>
     <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="http://wetter.orf.at/wien/prognose">ORF Wetter</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://www.bergfex.at/sommer/wien-stadt/wetter/">Bergfex Wetter</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://www.meteoblue.com/de/wetter/vorhersage/multimodel/unter-sankt-veit_Österreich_2601119">Meteoblue Multimodel Ober St. Veit</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://www.meteoblue.com/de/wetter/vorhersage/multimodel/biograd-na-moru_kroatien_3204121?fcstlength=168">Meteoblue Multimodel Biograd</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://online.bankaustria.at/wps/portal/userlogin">Bankaustria Onlinebanking</a>
     <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="https://online.bankaustria.at/wps/portal/userlogin">Bankaustria Onlinebanking</a>
-    <hr>
-    <a class="btn btn-primary btn-block btn-lg" href="http://9gag.com">9 Gag</a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://de.webfail.at/">Webfail</a>
-    <a class="btn btn-primary btn-block btn-lg" href="https://witze.at/witz-des-tages">Witz des Tages</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://9gag.com">9 Gag</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://de.webfail.at/">Webfail</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="https://witze.at/witz-des-tages">Witz des Tages</a>
     <hr>
     <h3>Webradio</h3>
-    <a class="btn btn-success btn-block btn-lg" href="http://www.radio.at/">Radio.at</a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://mp3stream7.apasf.apa.at/;?type=http&nocache=18478">Ö3 </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://mp3wien2.apasf.sf.apa.at/;?type=http&nocache=70">Radio Wien </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://onair.krone.at/kronehit-fresh.mp3">Kronehit Fresh </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://onair.krone.at/kronehit-hd.mp3">Kronehit HD </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://onair.krone.at/kronehit-event.mp3">Kronehit Summer </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://onair.krone.at/kronehit-love.mp3">Kronehit Lovesongs </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://onair.krone.at/kronehit-greatesthits.mp3">Kronehit Greatest Hits </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://raj.krone.at/kronehit-charts.mp3">Kronehit Charts </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://cdn.nrjaudio.fm/adwz1/at/55212/mp3_128.mp3">Radio Energy </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://streamplus14.leonex.de:24954/;584871725547991stream.nsv">Radio Ö24 </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://xapp2450489345c1000321.f.l.i.lb.core-cdn.net/1000321copo/live/app2450489345/w2445344770/live_de_96.mp3">88.6 der Musiksender </a>
-    <a class="btn btn-primary btn-block btn-lg" href="http://online-radiorelax.tavrmedia.ua/RadioRelax">Radio Relax </a>
+    <a class="btn btn-success btn-block btn-lg" target="_blank" href="http://www.radio.at/">Radio.at</a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://mp3stream7.apasf.apa.at/;?type=http&nocache=18478">Ö3 </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://mp3wien2.apasf.sf.apa.at/;?type=http&nocache=70">Radio Wien </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-fresh.mp3">Kronehit Fresh </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-hd.mp3">Kronehit HD </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-event.mp3">Kronehit Summer </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-love.mp3">Kronehit Lovesongs </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://onair.krone.at/kronehit-greatesthits.mp3">Kronehit Greatest Hits </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://raj.krone.at/kronehit-charts.mp3">Kronehit Charts </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://cdn.nrjaudio.fm/adwz1/at/55212/mp3_128.mp3">Radio Energy </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://streamplus14.leonex.de:24954/;584871725547991stream.nsv">Radio Ö24 </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://xapp2450489345c1000321.f.l.i.lb.core-cdn.net/1000321copo/live/app2450489345/w2445344770/live_de_96.mp3">88.6 der Musiksender </a>
+    <a class="btn btn-primary btn-block btn-lg" target="_blank" href="http://online-radiorelax.tavrmedia.ua/RadioRelax">Radio Relax </a>
     <hr>
 
       <!-- <div class="container">
