--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <label>Gehe zu URL:</label>
       </div>
       <div class="row margin-bootom-xs">
-        <div class="col-sm-10">
+        <div class="col-lg-11 col-md-10 col-sm-10 col-xs-9">
           <input id="urlToOpen" name="urlToOpen" type="url" class="form-control" required>
         </div>
-        <div class="col-sm-2">
-          <input class="btn btn-success" type="button" value="Öffne URL" onclick="openUrl()">
+        <div class="col-lg-1 col-md-2 col-sm-2 col-xs-3">
+          <input class="btn btn-success pull-right" type="button" value="Öffne URL" onclick="openUrl()">
         </div>
       </div>
       <div class="clearfix"></div>
@@ -60,15 +60,15 @@
           <label>Online Suche:</label>
       </div>
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-lg-8 col-md-7 col-sm-6 col-xs-5">
           <input class="form-control" id="searchString" name="searchString" type="text" class="" size="120" required>
         </div>
-        <div class="col-sm-6">
-          <div class="btn-group btn-group-fluid pull-right">
-            <input class="btn btn-success" type="button" value="QWant" onclick="doSearch('https://www.qwant.com/?t=all&q=')">
-            <input class="btn btn-success" type="button" value="DuckDuckGo" onclick="doSearch('https://duckduckgo.com/?q=')">
-            <input class="btn btn-success" type="button" value="Google" onclick="doSearch('https://www.google.at/search?q=')">
-            <input class="btn btn-success" type="button" value="Bing" onclick="doSearch('https://www.bing.com/search?q=')">
+        <div class="col-lg-4 col-md-5 col-sm-6 col-xs-7">
+          <div class="btn-group pull-right">
+            <input class="btn btn-success col-sm-3" type="button" value="QWant" onclick="doSearch('https://www.qwant.com/?t=all&q=')">
+            <input class="btn btn-success col-sm-3" type="button" value="DDG" onclick="doSearch('https://duckduckgo.com/?q=')">
+            <input class="btn btn-success col-sm-3" type="button" value="Google" onclick="doSearch('https://www.google.at/search?q=')">
+            <input class="btn btn-success col-sm-3" type="button" value="Bing" onclick="doSearch('https://www.bing.com/search?q=')">
           </div>
         </div>
       </div>
